--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.19.0",
     "bootstrap": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sinon": "^10.0.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
@@ -21,8 +23,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "./node_modules/.bin/cypress open",
-
+    "unit": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -43,9 +50,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "7.12.7",
+    "@babel/preset-react": "^7.12.7",
     "@cypress/react": "^5.7.0",
     "@cypress/webpack-dev-server": "^1.2.0",
+    "babel-jest": "^26.6.3",
     "cypress": "^7.3.0",
-    "html-webpack-plugin": "^4.5.2"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "html-webpack-plugin": "^4.5.2",
+    "jest": "^26.6.0",
+    "jest-cli": "^21.2.1",
+    "react-test-renderer": "^17.0.2"
   }
 }
